# TaskJunction

./: .gitignore  CMakeLists.txt  README.md  build-app.sh  build-database.sh  build.sh  config  protocol.md  todo.md
Client/: CMakeLists.txt  README.md  jsons.md
Client/include/: board.hpp  boardmenu.hpp  boardmodel.hpp  card.hpp  client.hpp  json_parser.hpp  list.hpp  listmodel.hpp  socket_handler.hpp
Client/include/shared/: basic_classes.hpp
Client/qml/: Authorization.qml  BoardSelect.qml  Card.qml  Client.qml  List.qml  Style.qml  client.qml  main.qml  test.qml
Client/shared/: base_classes.cpp  base_classes.hpp  basic_classes.hpp  json_parser.hpp
Client/src/: board.cpp  boardmenu.cpp  boardmodel.cpp  card.cpp  client.cpp  list.cpp  listmodel.cpp  main.cpp  qml.qrc  socket_handler.cpp
Shared/include/: database.hpp
Shared/src/: database.cpp
client/: CMakeLists.txt  README.md
client/include/: boardmenu.hpp  boardmodel.hpp  cardmodel.hpp  client.hpp  jsonparser.hpp  listmodel.hpp
client/qml/: Authorization.qml  Board.qml  BoardSelect.qml  Card.qml  List.qml  Style.qml  main.qml
client/shared/: json_parser.hpp  logging.hpp
client/src/: boardmenu.cpp  boardmodel.cpp  cardmodel.cpp  client.cpp  jsonparser.cpp  listmodel.cpp  main.cpp  qml.qrc
database/: CMakeLists.txt  create_database
database/include/: create_board.sql  database.hpp  doctest.h  element_classes.hpp  test_utils.hpp
database/src/: database.cpp  database_main.cpp  element_classes.cpp
database/test/: dotest_main.cpp  test.cpp
include/: create_board.sql  database.hpp  element_classes.hpp  logging.hpp  server.hpp
server/: CMakeLists.txt  TestProject  generate.sh  json-requests.md  localhost.cert  localhost.key  server
server/include/: client_socket.hpp  data_handler.hpp  datas.hpp  logging.hpp  query.hpp  server.hpp
server/openssl/: csr.conf  generate.sh
server/src/: client_socket.cpp  data_handler.cpp  datas.cpp  query.cpp  server.cpp  server_main.cpp  test_json.cpp
server/test/QtSocketTesting/: CMakeLists.txt  echoclient.cpp  echoclient.h  main.cpp
shared/: CMakeLists.txt  hash-test  json-test
shared/include/: element_classes.hpp  hashes.hpp  jsonparser.hpp
shared/src/: element_classes.cpp  hashes.cpp  jsonparser.cpp  test_hashes.cpp  test_json.cpp
src/: database.cpp  main.cpp  server.cpp  server_main.cpp
